@@ -1,3 +1,14 @@
+Mon Apr  7 19:43:15 2003  Owen Taylor  <otaylor@redhat.com>
+
+ 	* gdk/x11/gdkdisplay-x11.c (gdk_x11_display_ungrab): Flush
+ 	after ungrabbing the server.
+ 
+	* gdk/x11/gdkimage-x11.c: Remove some no-longer-needed
+	calls to XFlush().
+
+ 	* gdk/x11/gdkwindow-x11.c (_gdk_windowing_window_at_pointer):
+ 	Use gdk_x11_display_grab/ungrab.
+ 
 2003-04-07  Matthias Clasen  <maclas@gmx.de>
 
 	* gtk/gtktextlayout.c (set_para_values): 
